Archive2/16/0c31eca72ca59b/output
main.cpp: In function 'int main()':
main.cpp:38:38: error: 'getRTConfig' was not declared in this scope
     auto const & cdata = getRTConfig();
                                      ^
main.cpp:38:38: note: suggested alternative:
main.cpp:25:28: note:   'stuff::config::getRTConfig'
         ConfigData const & getRTConfig()
                            ^
